--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,5 @@
     <string name="txtIncome">Income</string>
     <string name="txtOverView">OverView</string>
     <string name="txtLogOut">Logout</string>
-
+    <string name="lblDate">Date</string>
 </resources>
